--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       <button id="start-button">StartGame</button>
       <p>Use the left and right arrow to control the car!</p>
       <img src="./images/arrows.png" alt="" class="arrows-img" />
+      <div class='score'></div>
     </div>
 
     <div id="game-board">
